Normalize config value parsing